# subconverter

./: .gitignore  CMakeLists.txt  README-cn.md  README-docker.md  README.md  compare_nodes.py  start_local_server.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  delete.yml  docker.yml  sub-web.yml  submodule.yml
base/: pref.example.ini  pref.example.toml  pref.example.yml  pref.ini
base/base/: Clash-General.yaml  all-base.tpl  clash_provider_test.yml
base/config/: AIO-Classic.ini  AIO-NoReject.ini  AIO-NoReject.toml  AIO.toml  AllSub-AdBlock.toml  AllSub-NoReject.toml  CordCloud-NoReject.ini  CordCloud-NoReject.toml  CordCloud.ini  CordCloud.toml  MultiSub-AdBlock.toml  MultiSub-NoReject.toml
base/rules/: GlobalMedia.list  Netflix.list  PROXY.list
base/snippets/: emoji.toml  emoji.txt  groups.toml  groups.txt  groups_forcerule.txt  rename_node.toml  rename_node.txt  rulesets.txt  rulesets_remote.txt
base/sub-web/: _redirects  index.html  manifest.webmanifest  service-worker.js  service-worker.js.map  sw.js  workbox-cf704ed8.js  workbox-cf704ed8.js.map
base/sub-web/assets/: @element-plus-icons-Bu9dlBsn.js  Subconverter-B2FSLglx.css  Subconverter-BRwXOARg.css  Subconverter-CbE0yvuk.css  Subconverter-Cy4554l7.js  Subconverter-DGAr_6TF.js  Subconverter-DdZsN4EB.js  Subconverter-msxJk3fM.js  Subconverter-s5Ll3K34.js  SvgIcon-ByvAllcW.js  axios-B79OeAoU.js  axios-Bn2YStS9.js  axios-Cdwqjz9U.js  axios-DA-gYLQv.js  axios-Drx_qohR.js  axios-adnBR_eC.js  axios-vmZOD6C5.js  element-plus-CJavllD9.js  element-plus-ChlnIXZe.js  element-plus-DpJcJxsA.js  index--oqTRINN.js  index-3Pio5LKd.css  index-7a09-hSX.js  index-9UPg9SBU.js  index-BG-jkMWD.js  index-BTcYfq_a.js  index-BZRTkqkV.js  index-BZjBW7QV.js  index-Bd_kP0Fo.css  index-BeYnYItg.js  index-CA0nHGB4.js  index-CQVq4csQ.css  index-CUOoY51f.js  index-CXSRIOgZ.js  index-ChP6yjCa.js  index-CmPVH3_O.css  index-Co5xjirQ.css  index-Con0vyzL.js  index-Cuyl1O1g.js  index-D0uNuRGr.js  (+44 more)
base/sub-web/css/: app.0a51d261.css
base/sub-web/js/: 292-legacy.d1519112.js  292-legacy.d1519112.js.map  447.331d328c.js  447.331d328c.js.map  app-legacy.0cf19b4a.js  app-legacy.0cf19b4a.js.map  app-legacy.0f6daf14.js  app-legacy.0f6daf14.js.map  app-legacy.299c7cc2.js  app-legacy.299c7cc2.js.map  app-legacy.97c9d09e.js  app-legacy.97c9d09e.js.map  app-legacy.d3c2e423.js  app-legacy.d3c2e423.js.map  app.21f1154b.js  app.21f1154b.js.map  app.328eeda6.js  app.328eeda6.js.map  app.8ce51ff7.js  app.8ce51ff7.js.map  app.994942eb.js  app.994942eb.js.map  app.9d4ef562.js  app.9d4ef562.js.map  app.b8c20764.js  app.b8c20764.js.map  app.c10a4c91.js  app.c10a4c91.js.map  app.c3286b5e.js  app.c3286b5e.js.map  app.e8b7d025.js  app.e8b7d025.js.map  chunk-15550382.2848e774.js  chunk-15550382.2848e774.js.map  chunk-15550382.8a2b8185.js  chunk-15550382.8a2b8185.js.map  chunk-15550382.a724754e.js  chunk-15550382.a724754e.js.map  chunk-15550382.a9d9f75e.js  chunk-15550382.a9d9f75e.js.map  (+19 more)
include/: quickjspp.hpp
scripts/: Dockerfile  build.alpine.release.sh  build.macos.release.sh  build.windows.release.sh  rules_config.conf  update_rules.py
src/generator/config/: nodemanip.cpp  nodemanip.h  ruleconvert.cpp  subexport.cpp  subexport.h
src/handler/: interfaces.cpp
src/parser/: subparser.cpp  subparser.h
src/parser/config/: proxy.h
src/script/: script_quickjs.h
src/utils/: age_decrypt.cpp  age_decrypt.h  string_hash.h
